# haiguitang

./: .gitignore  AGENTS.md  DEPLOYMENT.md  PRD.md  README.md  RESEARCH.md  TECH_DESIGN.md  VERCEL_CHECKLIST.md  VERCEL_FULLSTACK.md  vercel-fullstack.json  vercel-prod.json  vercel-simple.json  vercel.json
api/: index.py  requirements.txt
api/app/: data_store.py  main.py
api/app/routers/: games.py  judge.py  soups.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: ai_service.py  app.py  config.py  data_store.py  schemas.py
backend/app/routers/: games.py  judge.py  soups.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.vue  types.ts
frontend/src/api/: client.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  GamePlayView.vue  LobbyView.vue  SoupRevealView.vue  StatsView.vue
scripts/: README.md  build-fullstack.sh  install-deps.sh  run-tests.sh  start-all.sh  start-backend.sh  start-frontend.sh
